src/Styles/cardparent.css
.card-parent{
    height: 100vh;
    width: 100%;
    overflow: hidden;
    transition: all 1.5s ease;
}

.card-parent.active{
    opacity: 1;
    z-index: 10;
}

.card-parent.inactive{
    opacity: 0;
    z-index: -1;
}

.header{
    margin-top: 4rem;
}

.rule{
    text-align: center;
    text-wrap: wrap;
    margin: 0;
    margin-top: 1.5rem;
    font-weight: 50;
    font-size: 0.8rem;
    text-decoration: underline;
    /* max-width: 50%; */
}

.score{
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    text-align: left;
}

.score p{
    border: 1px solid #0959d1;
    padding: 5px 15px;
    font-size: 0.8rem;
    border-radius: 10px;
}

.score p:nth-of-type(2){
    margin-top: 0;
}

.cards{
    width: 100%;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-around;
    margin-top: 2rem;
    position: relative;
}

@media screen and (max-width: 468px) {
    .rule br{
        display: none;
    }
}

